<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/support_development"
        style="@style/SectionTextStyle"/>

    <LinearLayout
        android:id="@+id/btn_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_desc"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:id="@+id/btn_report_bugs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_bugs"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_bugs_desc"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:id="@+id/btn_improve_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/improve_app"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/improve_app_desc"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>
</LinearLayout>