<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/others"
        style="@style/SectionTextStyle"/>

    <LinearLayout
        android:id="@+id/btn_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/behavior"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/behavior_desc"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:id="@+id/btn_exceptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps_to_be_excluded"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:id="@+id/tv_exceptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:id="@+id/btn_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_desc"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            style="@style/ItemNameTextStyle"/>

        <TextView
            android:id="@+id/tv_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_desc"
            style="@style/ItemDescriptionTextStyle"/>

    </LinearLayout>
</LinearLayout>