<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cannic.apps.rlbubble.activities.WelcomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                style="@style/TextAppearance.AppCompat.Title"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/paragraph_spacing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_desc_1"
                style="@style/ItemNameTextStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/paragraph_spacing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_desc_2"
                style="@style/ItemNameTextStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/paragraph_spacing" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/floating_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/paragraph_spacing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_desc_3"
                style="@style/ItemNameTextStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/small_margin_or_padding"
        android:layout_marginEnd="@dimen/small_margin_or_padding"
        android:text="@string/understood"
        android:layout_gravity="end"
        app:cornerRadius="@dimen/radius"
        style="@style/TextButtonTheme" />

</androidx.constraintlayout.widget.ConstraintLayout>
