<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cannic.apps.rlbubble.activities.NotificationsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_notification"
                    style="@style/ItemNameTextStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/small_margin_or_padding"
                        android:src="@drawable/ic_info_outline_24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_margin_or_padding"
                        android:text="@string/app_notification_desc"
                        style="@style/ItemDescriptionTextStyle"/>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/app_notification_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin_or_padding"
                    android:layout_marginEnd="@dimen/small_margin_or_padding"
                    android:text="@string/app_notification_settings"
                    android:layout_gravity="end"
                    app:cornerRadius="@dimen/radius"
                    style="@style/TextButtonTheme" />

            </LinearLayout>

            <include layout="@layout/divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_notification"
                    style="@style/ItemNameTextStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_margin="@dimen/small_margin_or_padding"
                        android:src="@drawable/ic_info_outline_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_margin_or_padding"
                        android:text="@string/system_notification_desc"
                        style="@style/ItemDescriptionTextStyle"/>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/system_notification_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin_or_padding"
                    android:layout_marginEnd="@dimen/small_margin_or_padding"
                    android:text="@string/system_notifications_settings"
                    android:layout_gravity="end"
                    app:cornerRadius="@dimen/radius"
                    style="@style/TextButtonTheme" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <ImageView
            android:id="@+id/iv_arrow_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:src="@drawable/ic_arrow_back_24dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerInside"
            android:clickable="true"
            android:background="?android:selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            android:text="@string/notifications"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Title"/>

    </androidx.appcompat.widget.Toolbar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
